# jdrgb

./: .gitignore  Cargo.toml  README.md  install.ps1  uninstall.ps1
src/: main.rs
